--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         </div>
 
         <div class="section" id="contacto">
-            <h2>Contacto</h2>
+            <h2 class="subtitulos">Contacto</h2>
             <p>Teléfono: +52 5567541549</p>
             <p>Email: escobedoagustin775@gmail.com</p>
             <p>Facebook: Agustin Escobedo</p>
         </div>
 
         <div class="section" id="aptitudes">
-            <h2>Aptitudes</h2>
+            <h2 class="subtitulos">Aptitudes</h2>
             <ul>
                 <li>Resolución de problemas</li>
                 <li>Trabajo en equipo</li>
@@ -33,28 +33,28 @@
         </div>
 
         <div class="section" id="idiomas">
-            <h2>Idiomas</h2>
+            <h2 class="subtitulos">Idiomas</h2>
             <ul>
                 <li>Español: Nativo</li>
-                <li>Inglés: Avanzado</li>
-                <li>Francés: Intermedio</li>
+                <li>Inglés: B1</li>
+                
             </ul>
         </div>
 
         <div class="section" id="perfil-personal">
-            <h2>Perfil Personal</h2>
+            <h2 class="subtitulos">Perfil Personal</h2>
             <p>Soy un profesional apasionado por [tu área de especialización]. Me destaco por [menciona alguna
                 fortaleza] y estoy comprometido/a con el desarrollo personal y profesional continuo.</p>
         </div>
 
         <div class="section" id="experiencia">
-            <h2>Experiencia Profesional</h2>
+            <h2 class="subtitulos">Experiencia Profesional</h2>
             <p><strong>Nombre de la empresa</strong> - Puesto (Fecha inicio - Fecha fin)</p>
             <p>Descripción breve de las responsabilidades y logros.</p>
         </div>
 
         <div class="section" id="formacion-academica">
-            <h2>Formación Académica</h2>
+            <h2 class="subtitulos">Formación Académica</h2>
             <p><strong>Nombre de la institución</strong> - Título obtenido (Año)</p>
             <p>Descripción breve de los logros académicos relevantes.</p>
         </div>
