Actualización de datos al HomePage

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
         <div class="section" id="contacto">
             <h2 class="subtitulos">Contacto</h2>
-            <p>Teléfono: +52 5567541549</p>
-            <p>Email: escobedoagustin775@gmail.com</p>
-            <p>Facebook: Agustin Escobedo</p>
+            <p><strong>Téfono:</strong> +52 5567541549</p>
+            <p><strong>Email: </strong>escobedoagustin775@gmail.com</p>
+            <p><strong>Facebook:</strong> Agustin Escobedo</p>
         </div>
 
         <div class="section" id="aptitudes">
@@ -29,29 +29,42 @@
                 <li>Trabajo en equipo</li>
                 <li>Adaptabilidad</li>
                 <li>Comunicación efectiva</li>
+                <li>Empatia</li>
+                <li>Resolucion de conflictos</li>
+                <li>Adaptabilidad</li>
             </ul>
         </div>
-
-        <div class="section" id="idiomas">
-            <h2 class="subtitulos">Idiomas</h2>
-            <ul>
-                <li>Español: Nativo</li>
-                <li>Inglés: B1</li>
-                
-            </ul>
-        </div>
-
-        <div class="section" id="perfil-personal">
-            <h2 class="subtitulos">Perfil Personal</h2>
-            <p>Soy un profesional apasionado por [tu área de especialización]. Me destaco por [menciona alguna
-                fortaleza] y estoy comprometido/a con el desarrollo personal y profesional continuo.</p>
-        </div>
-
         <div class="section" id="experiencia">
             <h2 class="subtitulos">Experiencia Profesional</h2>
             <p><strong>Nombre de la empresa</strong> - Puesto (Fecha inicio - Fecha fin)</p>
             <p>Descripción breve de las responsabilidades y logros.</p>
         </div>
+        
+
+
+        <div class="section" id="perfil-personal">
+            <h2 class="subtitulos">Perfil Personal</h2>
+            <p>Soy un estudiante apasionado por la carrera de Ingeniería en Sistemas Computacionales, dedicado a
+                desarrollar habilidades técnicas y profesionales que me permitan contribuir de manera significativa en
+                el ámbito de la tecnología. Me destaco por mi capacidad para resolver problemas de manera eficiente, mi
+                creatividad para proponer soluciones innovadoras y mi habilidad para adaptarme a los constantes avances
+                tecnológicos.<br><br>
+                Estoy comprometido con el aprendizaje continuo, lo que me impulsa a explorar diversas áreas de la
+                ingeniería, como el desarrollo de software, la administración de bases de datos, la ciberseguridad y la
+                inteligencia artificial. Además, valoro la importancia del trabajo en equipo, la comunicación efectiva y
+                el pensamiento crítico, habilidades esenciales para enfrentar los retos de la industria tecnológica.
+
+            </p>
+        </div>
+        <div class="section" id="idiomas">
+            <h2 class="subtitulos">Idiomas</h2>
+            <ul>
+                <li>Español: Nativo</li>
+                <li>Inglés: B1</li>
+
+            </ul>
+        </div>
+
 
         <div class="section" id="formacion-academica">
             <h2 class="subtitulos">Formación Académica</h2>
