Actualización de datos al HomePages con rows y col

--- a/index.html
+++ b/index.html
@@ -14,62 +14,94 @@
             <img src="assets/images/canguro.jpg" alt="Foto de perfil">
             <h1 class="titulo">Agustin Escobedo Vargas</h1>
         </div>
+        <div class="col">
+            <div class="row">
+                <div class="col">
+                    <div class="section" id="contacto">
+                        <h2 class="subtitulos">Contacto</h2>
+                        <p><strong>Téfono:</strong> +52 5567541549</p>
+                        <p><strong>Email: </strong>escobedoagustin775@gmail.com</p>
+                        <p><strong>Facebook:</strong> Agustin Escobedo</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="section" id="lenguajes-de-programacion">
+                        <h2 class="subtitulos">Lenguajes de Programación</h2>
+                        <ul>
+                            <li>Python</li>
+                            <li>Java</li>
+                            <li>JavaScript</li>
+                            <li>C++</li>
+                            <li>PHP</li>
+                        </ul>
+                    </div>
 
-        <div class="section" id="contacto">
-            <h2 class="subtitulos">Contacto</h2>
-            <p><strong>Téfono:</strong> +52 5567541549</p>
-            <p><strong>Email: </strong>escobedoagustin775@gmail.com</p>
-            <p><strong>Facebook:</strong> Agustin Escobedo</p>
-        </div>
+                </div>
+                <div class="col">
+                    <div class="section" id="aptitudes">
+                        <h2 class="subtitulos">Aptitudes</h2>
+                        <ul>
+                            <li>Resolución de problemas</li>
+                            <li>Trabajo en equipo</li>
+                            <li>Adaptabilidad</li>
+                            <li>Comunicación efectiva</li>
+                            <li>Empatia</li>
+                            <li>Resolucion de conflictos</li>
+                            <li>Adaptabilidad</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="section" id="formacion-academica">
+                        <h2 class="subtitulos">Formación Académica</h2>
+                        <p><strong>Nombre de la institución</strong> - Título obtenido (Año)</p>
+                        <p>Descripción breve de los logros académicos relevantes.</p>
+                    </div>
 
-        <div class="section" id="aptitudes">
-            <h2 class="subtitulos">Aptitudes</h2>
-            <ul>
-                <li>Resolución de problemas</li>
-                <li>Trabajo en equipo</li>
-                <li>Adaptabilidad</li>
-                <li>Comunicación efectiva</li>
-                <li>Empatia</li>
-                <li>Resolucion de conflictos</li>
-                <li>Adaptabilidad</li>
-            </ul>
-        </div>
-        <div class="section" id="experiencia">
-            <h2 class="subtitulos">Experiencia Profesional</h2>
-            <p><strong>Nombre de la empresa</strong> - Puesto (Fecha inicio - Fecha fin)</p>
-            <p>Descripción breve de las responsabilidades y logros.</p>
-        </div>
-        
-
-
-        <div class="section" id="perfil-personal">
-            <h2 class="subtitulos">Perfil Personal</h2>
-            <p>Soy un estudiante apasionado por la carrera de Ingeniería en Sistemas Computacionales, dedicado a
-                desarrollar habilidades técnicas y profesionales que me permitan contribuir de manera significativa en
-                el ámbito de la tecnología. Me destaco por mi capacidad para resolver problemas de manera eficiente, mi
-                creatividad para proponer soluciones innovadoras y mi habilidad para adaptarme a los constantes avances
-                tecnológicos.<br><br>
-                Estoy comprometido con el aprendizaje continuo, lo que me impulsa a explorar diversas áreas de la
-                ingeniería, como el desarrollo de software, la administración de bases de datos, la ciberseguridad y la
-                inteligencia artificial. Además, valoro la importancia del trabajo en equipo, la comunicación efectiva y
-                el pensamiento crítico, habilidades esenciales para enfrentar los retos de la industria tecnológica.
-
-            </p>
-        </div>
-        <div class="section" id="idiomas">
-            <h2 class="subtitulos">Idiomas</h2>
-            <ul>
-                <li>Español: Nativo</li>
-                <li>Inglés: B1</li>
-
-            </ul>
-        </div>
-
-
-        <div class="section" id="formacion-academica">
-            <h2 class="subtitulos">Formación Académica</h2>
-            <p><strong>Nombre de la institución</strong> - Título obtenido (Año)</p>
-            <p>Descripción breve de los logros académicos relevantes.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="section" id="perfil-personal">
+                        <h2 class="subtitulos">Perfil Personal</h2>
+                        <p>Soy un estudiante apasionado por la carrera de Ingeniería en Sistemas Computacionales,
+                            dedicado a
+                            desarrollar habilidades técnicas y profesionales que me permitan contribuir de manera
+                            significativa en
+                            el ámbito de la tecnología. Me destaco por mi capacidad para resolver problemas de manera
+                            eficiente, mi
+                            creatividad para proponer soluciones innovadoras y mi habilidad para adaptarme a los
+                            constantes avances
+                            tecnológicos.<br><br>
+                            Estoy comprometido con el aprendizaje continuo, lo que me impulsa a explorar diversas áreas
+                            de la
+                            ingeniería, como el desarrollo de software, la administración de bases de datos, la
+                            ciberseguridad y la
+                            inteligencia artificial. Además, valoro la importancia del trabajo en equipo, la
+                            comunicación efectiva y
+                            el pensamiento crítico, habilidades esenciales para enfrentar los retos de la industria
+                            tecnológica.
+                        </p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="section" id="experiencia">
+                        <h2 class="subtitulos">Experiencia Profesional</h2>
+                        <p><strong>Nombre de la empresa</strong> - Puesto (Fecha inicio - Fecha fin)</p>
+                        <p>Descripción breve de las responsabilidades y logros.</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="section" id="idiomas">
+                        <h2 class="subtitulos">Idiomas</h2>
+                        <ul>
+                            <li>Español: Nativo</li>
+                            <li>Inglés: B1</li>
+                        </ul>
+                    </div>
+            
+                </div>
+            </div>
         </div>
     </div>
 </body>
