--- a/index.html
+++ b/index.html
@@ -6,67 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Portafolio</title>
     <link rel="stylesheet" href="Estilos/estilos.css">
-    <style>
-        /* body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #e8e8e8;
-        } */
 
-        .header {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        /* .header img {
-            width: 120px;
-            height: 120px;
-            border-radius: 50%;
-        } */
-
-        .titulo {
-            margin-top: 15px;
-        }
-
-        .grid {
-            width: 850px;
-            /* background-color: red; */
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 20px;
-        }
-
-        .grid-item {
-            background: #f9f9f9;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .subtitulos {
-            font-size: 1.2em;
-            margin-bottom: 10px;
-            color: #333;
-        }
-
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        ul li {
-            margin-bottom: 5px;
-        }
-    </style>
 </head>
 
 <body>
     <div class="container">
         <div class="header">
-            <img src="assets/images/canguro.jpg" alt="Foto de perfil">
-            <h1 class="titulo">Agustin Escobedo Vargas</h1>
+            <div class="row">
+                <img src="assets/images/canguro.jpg" alt="Foto de perfil" class="perfil">
+                <div class="info">
+                    <h1 class="titulo">Agustin Escobedo Vargas</h1>
+                    <p class="descripcion">Estudiante de Ingeniería en Sistemas Computacionales apasionado por la
+                        tecnología.</p>
+                </div>
+            </div>
         </div>
+
 
         <div class="grid">
             <div class="grid-item" id="contacto">
