Se agregan mas cambios de colroes

--- a/index.html
+++ b/index.html
@@ -6,28 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Portafolio</title>
     <link rel="stylesheet" href="Estilos/estilos.css">
-
 </head>
 
 <body>
     <div class="container">
         <div class="header">
-            <div class="row">
-                <img src="assets/images/canguro.jpg" alt="Foto de perfil" class="perfil">
-                <div class="info">
-                    <h1 class="titulo">Agustin Escobedo Vargas</h1>
-                    <p class="descripcion">Estudiante de Ingeniería en Sistemas Computacionales apasionado por la
-                        tecnología.</p>
-                </div>
-            </div>
+            <img src="assets/images/canguro.jpg" alt="Foto de perfil">
+            <h1 class="titulo">Agustin Escobedo Vargas</h1>
+            <p class="descripcion">Estudiante de Ingeniería en Sistemas Computacionales apasionado por la tecnología,
+                siempre en busca de nuevos retos y oportunidades para aprender. Interesado en el desarrollo de software,
+                la optimización de procesos y la implementación de soluciones tecnológicas innovadoras. Con una actitud
+                proactiva y orientada a resultados, disfruto trabajar en equipo y explorar diferentes áreas dentro del
+                ámbito tecnológico, desde programación y diseño hasta análisis de sistemas y gestión de proyectos.
+                Comprometido con el crecimiento profesional y el impacto positivo que la tecnología puede generar</p>
         </div>
-
 
         <div class="grid">
             <div class="grid-item" id="contacto">
                 <h2 class="subtitulos">Contacto</h2>
-                <p><strong>Téfono:</strong> +52 5567541549</p>
-                <p><strong>Email: </strong>escobedoagustin775@gmail.com</p>
+                <p><strong>Teléfono:</strong> +52 5567541549</p>
+                <p><strong>Email:</strong> escobedoagustin775@gmail.com</p>
                 <p><strong>Facebook:</strong> Agustin Escobedo</p>
             </div>
 
@@ -35,10 +33,8 @@
                 <h2 class="subtitulos">Perfil Personal</h2>
                 <p>Soy un estudiante apasionado por la carrera de Ingeniería en Sistemas Computacionales, dedicado a
                     desarrollar habilidades técnicas y profesionales que me permitan contribuir de manera significativa
-                    en
-                    el ámbito de la tecnología. Me destaco por mi capacidad para resolver problemas de manera eficiente,
-                    mi creatividad para proponer soluciones innovadoras y mi habilidad para adaptarme a los constantes
-                    avances tecnológicos.
+                    en el ámbito de la tecnología. Me destaco por mi capacidad para resolver problemas de manera
+                    eficiente, mi creatividad y mi habilidad para adaptarme a los avances tecnológicos.
                 </p>
             </div>
 
@@ -68,7 +64,6 @@
                     <li>JavaScript</li>
                     <li>C++</li>
                     <li>PHP</li>
-                    <li>Antonio.js</li>
                 </ul>
             </div>
 
