--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <div class="grid-item" id="experiencia">
                 <h2 class="subtitulos">Experiencia Profesional</h2>
-                <p><strong>Nombre de la empresa</strong> - Puesto (Fecha inicio - Fecha fin)</p>
+                <p><strong>Nombre de la empresa</strong> -Desarrolador (2024 - Actual)</p>
                 <p>Descripción breve de las responsabilidades y logros.</p>
             </div>
 
