--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             <div class="grid-item" id="experiencia">
                 <h2 class="subtitulos">Experiencia Profesional</h2>
                 <p><strong>Nombre de la empresa</strong> -Desarrolador (2024 - Actual)</p>
-                <p>Descripción breve de las responsabilidades y logros.</p>
+                <p>-Desarrollo y mejora de paginas Administrativas</p>
+                <p>-Optimizacion de consultas SQL</p>
             </div>
 
             <div class="grid-item" id="lenguajes-de-programacion">
@@ -69,13 +70,14 @@
 
             <div class="grid-item" id="formacion-academica">
                 <h2 class="subtitulos">Formación Académica</h2>
-                <p><strong>Nombre de la institución</strong> - Título obtenido (Año)</p>
+                <p><strong>UBAM</strong> -Certificado de preparatorio </p>
                 <p>Descripción breve de los logros académicos relevantes.</p>
+                <p><strong>UBAM</strong> -En curso</p>
             </div>
 
             <div class="grid-item" id="idiomas">
                 <h2 class="subtitulos">Idiomas</h2>
-                <ul>
+                <ul>    
                     <li>Español: Nativo</li>
                     <li>Inglés: B1</li>
                 </ul>
