Este es el commit final

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="assets/images/canguro.jpg" alt="Foto de perfil">
+            <img src="assets/images/foto_perfil.JPG" alt="Foto de perfil">
             <h1 class="titulo">Agustin Escobedo Vargas</h1>
             <p class="descripcion">Estudiante de Ingeniería en Sistemas Computacionales apasionado por la tecnología,
                 siempre en busca de nuevos retos y oportunidades para aprender. Interesado en el desarrollo de software,
@@ -52,7 +52,7 @@
 
             <div class="grid-item" id="experiencia">
                 <h2 class="subtitulos">Experiencia Profesional</h2>
-                <p><strong>Nombre de la empresa</strong> -Desarrolador (2024 - Actual)</p>
+                <p><strong>Kosmos GPS</strong> -Desarrolador (2024 - Actual)</p>
                 <p>-Desarrollo y mejora de paginas Administrativas</p>
                 <p>-Optimizacion de consultas SQL</p>
             </div>
