Cambio menor al repo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 la optimización de procesos y la implementación de soluciones tecnológicas innovadoras. Con una actitud
                 proactiva y orientada a resultados, disfruto trabajar en equipo y explorar diferentes áreas dentro del
                 ámbito tecnológico, desde programación y diseño hasta análisis de sistemas y gestión de proyectos.
-                Comprometido con el crecimiento profesional y el impacto positivo que la tecnología puede generar</p>
+                Comprometido con el crecimiento profesional y el impacto positivo que la tecnología puede generar.</p>
         </div>
 
         <div class="grid">
